--- a/Baby Project.ipynb
+++ b/Baby Project.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "072369d2-2ea9-4ad4-ab30-b7388b18c7dc",
+   "metadata": {},
+   "source": [
+    "## Question 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "90f62ba9-2d20-4fca-b161-15f33ee9ce93",
    "metadata": {},
    "outputs": [],
@@ -2712,7 +2720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "67ec1751-896c-4ada-a201-fc37242e1f18",
    "metadata": {
     "scrolled": true,
@@ -2789,7 +2797,7 @@
        "5      Var                      Variable Account"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2807,8 +2815,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9c5ea7fe-1e3f-4424-8570-55da7c3967f3",
+   "metadata": {},
+   "source": [
+    "## Question 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e82e606e-1231-4969-8cac-43a784cd7d00",
+   "metadata": {},
+   "source": [
+    "Please ignore the df_allocations tables and only focus on the df_futureAllocations tables when grading. The df_allocations were done with incorrect data, and df_futureAllocations are the corrected version."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "af4aaf1d-e1d3-48cd-a488-58032ccf78ce",
    "metadata": {},
    "outputs": [],
@@ -2818,7 +2842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "e39a9411-fdf4-44dd-96fe-fe97badbbabf",
    "metadata": {},
    "outputs": [
@@ -2928,7 +2952,7 @@
        "5                        Variable Account  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2939,7 +2963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "id": "ec0a8985-74b0-41a7-bf02-c31e0035f739",
    "metadata": {},
    "outputs": [],
@@ -2949,7 +2973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "830eae59-faac-4f4b-bf01-30d627ea67d1",
    "metadata": {},
    "outputs": [
@@ -3023,7 +3047,7 @@
        "5                        Variable Account          100.0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3034,7 +3058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "id": "904c10e4-e606-47b6-bd4a-c6aac347738b",
    "metadata": {},
    "outputs": [],
@@ -3129,7 +3153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "id": "d50b626b-e42d-4676-ab86-303e7479d267",
    "metadata": {},
    "outputs": [],
@@ -3224,7 +3248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "id": "446b666e-b18b-4081-97e3-ff61a04d2fac",
    "metadata": {},
    "outputs": [],
@@ -3235,7 +3259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "id": "4976c05d-f348-49e1-9bd5-149cb7b60693",
    "metadata": {
     "tags": []
@@ -3333,7 +3357,7 @@
        "5          100.0  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3344,10 +3368,291 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5d81ea11-78b4-4f54-bf0e-17aa3eebc329",
+   "metadata": {},
+   "source": [
+    "Below is the correct version of Question 3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9f3898f7-f7d1-45c6-b500-e22aa1cff80e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_futureAllocations1 = pd.json_normalize(data1, record_path=['FundAllocationFuture'])[['Name', 'Allocation']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b6b4b3b6-ec5e-4a47-bafc-8d6d34dd0326",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Allocation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Vanguard VIF Mid Cap Index</td>\n",
+       "      <td>100%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Name Allocation\n",
+       "0  Vanguard VIF Mid Cap Index       100%"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_futureAllocations1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "15dd3cb2-19d4-4da1-8b6a-46b481320c0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_futureAllocations2 = pd.json_normalize(data2, record_path=['FundAllocationFuture'])[['Name', 'Allocation']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d0381f30-98b5-4486-a866-ad5c3d086ef4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Allocation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Vanguard VIF Mid Cap Index</td>\n",
+       "      <td>100%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Name Allocation\n",
+       "0  Vanguard VIF Mid Cap Index       100%"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_futureAllocations2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "0dedcef4-5eff-47a1-99d1-7ef06a357d7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_futureAllocations3 = pd.json_normalize(data3, record_path=['FundAllocationFuture'])[['Name', 'Allocation']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "dd284914-2421-4566-9167-64fc3c3875d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Allocation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Vanguard VIF Mid Cap Index</td>\n",
+       "      <td>100%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Name Allocation\n",
+       "0  Vanguard VIF Mid Cap Index       100%"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_futureAllocations3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8c6e7495-8a70-4e92-9417-4646316c8c64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_futureAllocations = df_futureAllocations1.merge(df_futureAllocations2, on = 'Name')\n",
+    "merged_futureAllocations = merged_futureAllocations.merge(df_futureAllocations3, on = 'Name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "1c30708b-0536-441e-82a2-879a5d0a54bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Allocation_x</th>\n",
+       "      <th>Allocation_y</th>\n",
+       "      <th>Allocation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Vanguard VIF Mid Cap Index</td>\n",
+       "      <td>100%</td>\n",
+       "      <td>100%</td>\n",
+       "      <td>100%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Name Allocation_x Allocation_y Allocation\n",
+       "0  Vanguard VIF Mid Cap Index         100%         100%       100%"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_futureAllocations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f6f0b12c-9f3f-41a3-9859-9470c909623e",
    "metadata": {},
    "source": [
     "Summary table that shows the percentage of allocation in total by the 3 applicants is above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65e81e6d-2562-4e9f-abdf-99c8af53ddfe",
+   "metadata": {},
+   "source": [
+    "## Question 3"
    ]
   },
   {
